[gd_scene load_steps=34 format=2]

[ext_resource path="res://Scenes/MultiPass.gd" type="Script" id=1]
[ext_resource path="res://Shaders/ShowNegativeColorNoZShaderMaterial.tres" type="Material" id=2]
[ext_resource path="res://Shaders/GradientSubtractionShader.tres" type="Shader" id=3]
[ext_resource path="res://Shaders/PressureShader.tres" type="Shader" id=4]
[ext_resource path="res://Assets/Images/baseTexture.png" type="Texture" id=5]
[ext_resource path="res://Scenes/PressureViewport.gd" type="Script" id=6]
[ext_resource path="res://Shaders/DivergenceShaderMaterial.tres" type="Material" id=7]
[ext_resource path="res://Shaders/ViscosityShaderMaterial.tres" type="Material" id=8]
[ext_resource path="res://Assets/Brushes/SoftBrush.png" type="Texture" id=9]
[ext_resource path="res://Scenes/NestedViewportControl.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/UITheme.tres" type="Theme" id=11]
[ext_resource path="res://Shaders/BorderConditionShader.tres" type="Shader" id=12]
[ext_resource path="res://Shaders/VelocityForcesShaderMaterial.tres" type="Material" id=13]
[ext_resource path="res://Scenes/MouseControl.tscn" type="PackedScene" id=14]
[ext_resource path="res://Shaders/AdvectPaintShader.tres" type="Shader" id=15]

[sub_resource type="ShaderMaterial" id=55]
shader = ExtResource( 15 )
shader_param/deltaTime = 0.05
shader_param/brushColor = Color( 0, 0, 0, 0 )
shader_param/brushCenterUV = null
shader_param/brushScale = Vector2( 0.1, 0.1 )
shader_param/brushOn = false
shader_param/brushTexture = ExtResource( 9 )

[sub_resource type="ViewportTexture" id=18]
viewport_path = NodePath("VelocityViewport")

[sub_resource type="ViewportTexture" id=67]
viewport_path = NodePath("ViscosityViewport")

[sub_resource type="ShaderMaterial" id=59]
shader = ExtResource( 12 )
shader_param/borderScaleFactor = -1.0
shader_param/borderWidth = 2.0
shader_param/borderActive = true

[sub_resource type="ViewportTexture" id=68]
viewport_path = NodePath("VelocityForcesViewport")

[sub_resource type="ViewportTexture" id=63]
viewport_path = NodePath("VelocityBorderViewport")

[sub_resource type="ViewportTexture" id=49]
viewport_path = NodePath("DivergenceViewport")

[sub_resource type="ShaderMaterial" id=27]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/divergence = SubResource( 49 )

[sub_resource type="ShaderMaterial" id=61]
shader = ExtResource( 12 )
shader_param/borderScaleFactor = 1.0
shader_param/borderWidth = 2.0
shader_param/borderActive = true

[sub_resource type="ViewportTexture" id=73]
viewport_path = NodePath("PressureViewport")

[sub_resource type="ViewportTexture" id=75]
viewport_path = NodePath("VelocityBorderViewport")

[sub_resource type="ShaderMaterial" id=30]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/velocity = SubResource( 75 )

[sub_resource type="ViewportTexture" id=74]
viewport_path = NodePath("PressureBorderViewport")

[sub_resource type="ViewportTexture" id=76]
viewport_path = NodePath("GradientSubtractionViewport")

[sub_resource type="ShaderMaterial" id=77]
resource_local_to_scene = true
shader = ExtResource( 15 )
shader_param/deltaTime = 0.05
shader_param/brushColor = Color( 0, 0, 0, 0 )
shader_param/brushCenterUV = null
shader_param/brushScale = 0.1
shader_param/brushOn = false
shader_param/velocity = SubResource( 76 )
shader_param/brushTexture = ExtResource( 9 )

[sub_resource type="ViewportTexture" id=72]
viewport_path = NodePath("DyeViewport")

[sub_resource type="ViewportTexture" id=70]
viewport_path = NodePath("VelocityViewport")

[sub_resource type="ViewportTexture" id=71]
viewport_path = NodePath("BackBufferViewport")

[node name="MultiPass" type="Node"]
script = ExtResource( 1 )

[node name="VelocityViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
transparent_bg = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="VelocityViewport"]
material = SubResource( 55 )
centered = false

[node name="ViscosityViewport" parent="." instance=ExtResource( 10 )]
render_target_v_flip = true
levels = 4
shader_material = ExtResource( 8 )
texture = SubResource( 18 )

[node name="VelocityForcesViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="VelocityForcesViewport"]
material = ExtResource( 13 )
texture = SubResource( 67 )
centered = false

[node name="VelocityBorderViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="VelocityBorderViewport"]
material = SubResource( 59 )
texture = SubResource( 68 )
centered = false

[node name="DivergenceViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="DivergenceViewport"]
material = ExtResource( 7 )
texture = SubResource( 63 )
centered = false

[node name="PressureViewport" parent="." instance=ExtResource( 10 )]
size = Vector2( 512, 512 )
handle_input_locally = false
script = ExtResource( 6 )
levels = 16
shader_material = SubResource( 27 )

[node name="PressureBorderViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="PressureBorderViewport"]
material = SubResource( 61 )
texture = SubResource( 73 )
centered = false

[node name="GradientSubtractionViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="GradientSubtractionViewport"]
material = SubResource( 30 )
texture = SubResource( 74 )
centered = false

[node name="DyeViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="DyeViewport"]
material = SubResource( 77 )
centered = false

[node name="Icon" type="Sprite" parent="DyeViewport"]
scale = Vector2( 8, 8 )
texture = ExtResource( 5 )
centered = false

[node name="BackBufferViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="BackBufferViewport"]
texture = SubResource( 72 )
centered = false

[node name="VelocitySprite" type="Sprite" parent="."]
material = ExtResource( 2 )
position = Vector2( 288, 288 )
texture = SubResource( 70 )

[node name="FinalViewportSprite" type="Sprite" parent="."]
material = ExtResource( 2 )
position = Vector2( 927, 288 )
texture = SubResource( 71 )

[node name="UIControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseVelocityControl" parent="UIControl" instance=ExtResource( 14 )]
margin_left = 32.0
margin_top = 32.0
margin_right = -736.0
margin_bottom = -176.0

[node name="MouseDyeControl" parent="UIControl" instance=ExtResource( 14 )]
margin_left = 672.0
margin_top = 32.0
margin_right = -96.0
margin_bottom = -176.0

[node name="RefreshVelocityButton" type="Button" parent="UIControl"]
margin_left = 216.0
margin_top = 560.0
margin_right = 363.0
margin_bottom = 592.0
text = "Refresh Velocity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefreshIconButton" type="Button" parent="UIControl"]
margin_left = 864.0
margin_top = 600.0
margin_right = 992.0
margin_bottom = 632.0
text = "Refresh Icon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefreshClearButton" type="Button" parent="UIControl"]
margin_left = 864.0
margin_top = 640.0
margin_right = 992.0
margin_bottom = 672.0
text = "Refresh Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressureLevelSpinBox" type="SpinBox" parent="UIControl"]
margin_left = 368.0
margin_top = 680.0
margin_right = 454.0
margin_bottom = 716.0
min_value = 1.0
value = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViscosityLevelSpinBox" type="SpinBox" parent="UIControl"]
margin_left = 368.0
margin_top = 600.0
margin_right = 454.0
margin_bottom = 636.0
min_value = 1.0
max_value = 50.0
value = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViscosityScaleSpinBox" type="SpinBox" parent="UIControl"]
margin_left = 368.0
margin_top = 640.0
margin_right = 454.0
margin_bottom = 676.0
max_value = 1000.0
step = 0.1
value = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VorticityMeasureSpinBox" type="SpinBox" parent="UIControl"]
margin_left = 576.0
margin_top = 600.0
margin_right = 672.0
margin_bottom = 636.0
max_value = 64.0
step = 0.1
value = 8.0

[node name="BordersCheckbox" type="CheckBox" parent="UIControl"]
margin_left = 576.0
margin_top = 640.0
margin_right = 672.0
margin_bottom = 674.0
pressed = true
text = "On"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkBrushCheckbox" type="CheckBox" parent="UIControl"]
margin_left = 576.0
margin_top = 560.0
margin_right = 640.0
margin_bottom = 594.0
pressed = true
text = "Link"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UIControl"]
margin_left = 168.0
margin_top = 600.0
margin_right = 360.0
margin_bottom = 632.0
text = "Viscosity Multi-passes"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="UIControl"]
margin_left = 272.0
margin_top = 640.0
margin_right = 360.0
margin_bottom = 672.0
text = "Viscosity"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10" type="Label" parent="UIControl"]
margin_left = 464.0
margin_top = 600.0
margin_right = 560.0
margin_bottom = 632.0
text = "Vorticity"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label11" type="Label" parent="UIControl"]
margin_left = 464.0
margin_top = 640.0
margin_right = 560.0
margin_bottom = 672.0
text = "Borders"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label13" type="Label" parent="UIControl"]
margin_left = 464.0
margin_top = 680.0
margin_right = 560.0
margin_bottom = 712.0
text = "Vel. Source"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UIControl"]
margin_left = 168.0
margin_top = 680.0
margin_right = 360.0
margin_bottom = 712.0
text = "Pressure Multi-passes"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label12" type="Label" parent="UIControl"]
margin_left = 768.0
margin_top = 680.0
margin_right = 858.0
margin_bottom = 712.0
text = "Resolution"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalViewButton" type="OptionButton" parent="UIControl"]
margin_left = 864.0
margin_top = 560.0
margin_right = 992.0
margin_bottom = 592.0
text = "Dye"
align = 1
items = [ "Dye", null, false, 1, false, "Viscosity", null, false, 0, false, "Divergence", null, false, 4, null, "Pressure", null, false, 5, null, "Pressure Force", null, false, 6, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionButton" type="OptionButton" parent="UIControl"]
margin_left = 864.0
margin_top = 680.0
margin_right = 992.0
margin_bottom = 712.0
text = "256x256"
align = 1
items = [ "64x64", null, false, 1, false, "128x128", null, false, 0, false, "256x256", null, false, 2, null, "512x512", null, false, 3, null ]
selected = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VelocitySourceButton" type="OptionButton" parent="UIControl"]
margin_left = 574.0
margin_top = 680.0
margin_right = 736.0
margin_bottom = 712.0
text = "Viscosity"
align = 1
items = [ "Viscosity", null, false, 1, false, "Pressure Force", null, false, 0, false ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrushSizeHSlider" type="HSlider" parent="UIControl"]
margin_left = 16.0
margin_top = 680.0
margin_right = 144.0
margin_bottom = 712.0
min_value = 0.005
max_value = 0.4
step = 0.005
value = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton" type="ColorPickerButton" parent="UIControl"]
margin_left = 16.0
margin_top = 600.0
margin_right = 144.0
margin_bottom = 632.0
color = Color( 0.34902, 1, 0, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrushTypeButton" type="OptionButton" parent="UIControl"]
margin_left = 16.0
margin_top = 640.0
margin_right = 144.0
margin_bottom = 672.0
text = "Hard"
align = 1
items = [ "Softest", null, false, 1, false, "Soft", null, false, 0, false, "Hard", null, false, 2, null, "Hardest", null, false, 3, null, "Bristles", null, false, 4, null ]
selected = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label15" type="Label" parent="UIControl"]
margin_left = 1144.0
margin_top = 640.0
margin_right = 1272.0
margin_bottom = 672.0
text = "Change Scene"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneButton" type="OptionButton" parent="UIControl"]
margin_left = 1064.0
margin_top = 680.0
margin_right = 1272.0
margin_bottom = 712.0
text = "Multi-pass Demo"
align = 1
items = [ "Multi-pass Simple", null, false, 1, false, "Multi-pass Demo", null, false, 0, false, "Single-pass Demo", null, false, 2, null ]
selected = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="force_applied" from="UIControl/MouseVelocityControl" to="." method="_on_MouseVelocityControl_force_applied"]
[connection signal="force_released" from="UIControl/MouseVelocityControl" to="." method="_on_MouseVelocityControl_force_released"]
[connection signal="force_applied" from="UIControl/MouseDyeControl" to="." method="_on_MouseDyeControl_force_applied"]
[connection signal="force_released" from="UIControl/MouseDyeControl" to="." method="_on_MouseDyeControl_force_released"]
[connection signal="pressed" from="UIControl/RefreshVelocityButton" to="." method="_on_RefreshVelocityButton_pressed"]
[connection signal="pressed" from="UIControl/RefreshIconButton" to="." method="_on_RefreshIconButton_pressed"]
[connection signal="pressed" from="UIControl/RefreshClearButton" to="." method="_on_RefreshClearButton_pressed"]
[connection signal="value_changed" from="UIControl/PressureLevelSpinBox" to="." method="_on_PressureLevelSpinBox_value_changed"]
[connection signal="value_changed" from="UIControl/ViscosityLevelSpinBox" to="." method="_on_ViscosityLevelSpinBox_value_changed"]
[connection signal="value_changed" from="UIControl/ViscosityScaleSpinBox" to="." method="_on_ViscosityScaleSpinBox_value_changed"]
[connection signal="value_changed" from="UIControl/VorticityMeasureSpinBox" to="." method="_on_VorticityMeasureSpinBox_value_changed"]
[connection signal="toggled" from="UIControl/BordersCheckbox" to="." method="_on_BordersCheckbox_toggled"]
[connection signal="toggled" from="UIControl/LinkBrushCheckbox" to="." method="_on_LinkBrushCheckbox_toggled"]
[connection signal="item_selected" from="UIControl/FinalViewButton" to="." method="_on_FinalViewButton_item_selected"]
[connection signal="item_selected" from="UIControl/ResolutionButton" to="." method="_on_ResolutionButton_item_selected"]
[connection signal="item_selected" from="UIControl/VelocitySourceButton" to="." method="_on_VelocitySourceButton_item_selected"]
[connection signal="value_changed" from="UIControl/BrushSizeHSlider" to="." method="_on_BrushSizeHSlider_value_changed"]
[connection signal="color_changed" from="UIControl/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="item_selected" from="UIControl/BrushTypeButton" to="." method="_on_BrushTypeButton_item_selected"]
[connection signal="item_selected" from="UIControl/SceneButton" to="." method="_on_SceneButton_item_selected"]
